# browsermark

./: AGENTS.md  README.md  app.js  index.html  package-lock.json  package.json  project.md  styles.css  vite.config.js  wrangler.jsonc
.github/workflows/: release.yml
src/: DiagramManager.js  app.js  docx-generator.js  index.html  mhtml-generator.js  pdf-generator.js  png-generator.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/renderers/: diagramRenderer.js
src/utils/: markdownParser.js  scriptLoader.js
tests/: DiagramManager.test.js  png-generator.test.js
tests/renderers/: diagramRenderer.test.js
tests/utils/: markdownParser.test.js  scriptLoader.test.js
